--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "ts-custom-error": "^2.2.2",
     "ts-xor": "^1.0.6",
     "url-regex-safe": "^3.0.0",
-    "utility-types": "^3.10.0"
+    "utility-types": "^3.10.0",
+    "fzstd": "0.1.0"
   },
   "peerDependencies": {
     "re2": "^1.17.2"
